# ugpibd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: ugpibd.rb
contrib/: 99-ugpibd.rules  gpibd.service  smoke_test.py  ugpibd.service
docs/: DESIGN.md  HARDWARE-TEST.md
docs/superpowers/plans/: 2026-04-17-gpibd-implementation.md  2026-04-17-ugpibd-implementation.md  2026-07-20-v0.2.0-defaults-and-82357a-firmware.md
docs/superpowers/specs/: 2026-04-17-gpibd-design.md  2026-04-17-ugpibd-design.md  2026-06-08-scpi-hislip-client-design.md  2026-07-20-usb-port-selection-design.md  2026-07-20-v0.2.0-defaults-and-82357a-firmware-design.md  2026-07-20-v0.2.0-defaults-mdns-firmware-design.md
firmware/: LICENSE
scripts/: release
src/: firmware.rs  gpib.rs  lib.rs  main.rs  prologix.rs  protocol.rs  server.rs  usb.rs
src/backend/: agilent_82357b.rs  mod.rs  select.rs
src/backend/agilent_82357/: firmware.rs  gpib.rs  mod.rs  protocol.rs  usb.rs
src/backend/agilent_82357b/: firmware.rs  gpib.rs  mod.rs  usb.rs
src/backend/ni_usb_hs/: mod.rs  protocol.rs  usb.rs
src/hislip/: client.rs  errors.rs  instrument.rs  messages.rs  mod.rs  protocol.rs  server.rs
tests/: firmware_82357a.rs  hex_parse.rs  hislip_client.rs  hislip_integration.rs  prologix_parse.rs  protocol_roundtrip.rs  scpi_cli.rs
