[package]
name = "gpibd"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
description = "Userspace driver for Agilent/Keysight 82357B USB-GPIB adapter with Prologix TCP server"

[[bin]]
name = "gpibd"
path = "src/main.rs"

[lib]
name = "gpibd"
path = "src/lib.rs"

[dependencies]
nusb = "0.1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
