[package]
name = "ugpibd"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
description = "Userspace driver for Agilent/Keysight 82357B USB-GPIB adapter with Prologix TCP server"

[[bin]]
name = "ugpibd"
path = "src/main.rs"

[lib]
name = "ugpibd"
path = "src/lib.rs"

[dependencies]
nusb = "0.1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
bytes = "1"
rustyline = "18"
byteorder = "1.4"
bitfield = "0.14"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
